samples/_failures_safe/1761398214_a2ac22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9422692b.c: In function ‘main’:
./samples/SAFE/__tmp_9422692b.c:159:9: error: expected declaration or statement at end of input
  159 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_9422692b.c:159:9: error: expected declaration or statement at end of input
